# strictpy

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py
strictpy/: __init__.py  decorator.py
strictpy.egg-info/: PKG-INFO  SOURCES.txt
stricty/: __init__.py  decorator.py  errors.py
stricty.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
